release/1.14.1/VERSION.md
# 1.14.1

## Version

|**Data**        | **Value**                 |
|----------------|-------------------------|
| ID   | ```1.14.1```   |
| Release Time   | ```2019-05-13T11:10:12+00:00```   |
| Type   | ```release```   |

## Assets

|**Data**        | **Value**                 |
|----------------|-------------------------|
| id   | ```1.14```   |
| sha1   | ```43b2f3021fe9f7d768378de95538e22da3ee8301```   |
| size   | ```227730```   |
| total size  | ```214054321```  |
| url       | ```https://piston-meta.mojang.com/v1/packages/43b2f3021fe9f7d768378de95538e22da3ee8301/1.14.json``` |

## Client

|**Data**        | **Value**                 |
|----------------|-------------------------|
| sha1   | ```55ba86ddcbc3579397f41910463ffd4056e1e523```   |
| size   | ```18814947```   |
| url       | ```https://piston-data.mojang.com/v1/objects/55ba86ddcbc3579397f41910463ffd4056e1e523/client.jar``` |

## Server

|**Data**        | **Value**                 |
|----------------|-------------------------|
| sha1   | ```ed76d597a44c5266be2a7fcd77a8270f1f0bc118```   |
| size   | ```35927691```   |
| url       | ```https://piston-data.mojang.com/v1/objects/ed76d597a44c5266be2a7fcd77a8270f1f0bc118/server.jar``` |

## Java

|**Data**        | **Value**                 |
|----------------|-------------------------|
| component   | ```jre-legacy```   |
| version   | ```8```   |