release/1.14.2/VERSION.md
# 1.14.2

## Version

|**Data**        | **Value**                 |
|----------------|-------------------------|
| ID   | ```1.14.2```   |
| Release Time   | ```2019-05-27T11:48:25+00:00```   |
| Type   | ```release```   |

## Assets

|**Data**        | **Value**                 |
|----------------|-------------------------|
| id   | ```1.14```   |
| sha1   | ```43b2f3021fe9f7d768378de95538e22da3ee8301```   |
| size   | ```227730```   |
| total size  | ```214054321```  |
| url       | ```https://piston-meta.mojang.com/v1/packages/43b2f3021fe9f7d768378de95538e22da3ee8301/1.14.json``` |

## Client

|**Data**        | **Value**                 |
|----------------|-------------------------|
| sha1   | ```ca6c5a139045967229975c0c0b7f93e78b4314c2```   |
| size   | ```18794327```   |
| url       | ```https://piston-data.mojang.com/v1/objects/ca6c5a139045967229975c0c0b7f93e78b4314c2/client.jar``` |

## Server

|**Data**        | **Value**                 |
|----------------|-------------------------|
| sha1   | ```808be3869e2ca6b62378f9f4b33c946621620019```   |
| size   | ```35932967```   |
| url       | ```https://piston-data.mojang.com/v1/objects/808be3869e2ca6b62378f9f4b33c946621620019/server.jar``` |

## Java

|**Data**        | **Value**                 |
|----------------|-------------------------|
| component   | ```jre-legacy```   |
| version   | ```8```   |